--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSCameraUsageDescription</key>
+    <string>需要您的同意,APP才能访问相机</string>
+    <key>NSLocationUsageDescription</key>
+    <string>需要您的同意, APP才能访问位置</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>App需要您的同意, APP才能在使用期间访问位置</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>需要您的同意,APP才能访问麦克风</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>需要您的同意,APP才能访问相册</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
