--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,16 +2,41 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSCameraUsageDescription</key>
-    <string>需要您的同意,APP才能访问相机</string>
-    <key>NSLocationUsageDescription</key>
-    <string>需要您的同意, APP才能访问位置</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>App需要您的同意, APP才能在使用期间访问位置</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>需要您的同意,APP才能访问麦克风</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>需要您的同意,APP才能访问相册</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <!--
+        <dict>
+        ... Some other CFBundleURLTypes definition.
+        </dict>
+        -->
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <!--
+                  Replace "000000000000" with your Facebook App ID here.
+                  **NOTE**: The scheme needs to start with `fb` and then your ID.
+                -->
+                <string>fb542131503399181</string>
+            </array>
+        </dict>
+    </array>
+
+    <key>FacebookAppID</key>
+
+    <!-- Replace "000000000000" with your Facebook App ID here. -->
+    <string>542131503399181</string>
+    <key>FacebookDisplayName</key>
+
+    <!-- Replace "YOUR_APP_NAME" with your Facebook App name. -->
+    <string>lotmaxx_3d_print</string>
+
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -32,6 +57,16 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>需要您的同意,APP才能访问相机</string>
+	<key>NSLocationUsageDescription</key>
+	<string>需要您的同意, APP才能访问位置</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App需要您的同意, APP才能在使用期间访问位置</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要您的同意,APP才能访问麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要您的同意,APP才能访问相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
