--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_country_picker: 0.1.6 #国家选择器 
+  flutter_country_picker: ^0.1.6 #国家选择器 
   international_phone_input: ^1.0.2 #国家选择器
   percent_indicator: ^2.1.1+1 #进度指示器
   flutter_screenutil: ^0.7.0
@@ -37,6 +37,7 @@ dependencies:
   # image_picker: ^0.6.3+4
   transparent_image: ^1.0.0 #图片加载占位符
   flutter_easyrefresh: ^2.0.9 #上拉（下拉）刷新
+  flutter_facebook_login: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
